--- a/src/app/admin/components/products-admin/products-admin.component.html
+++ b/src/app/admin/components/products-admin/products-admin.component.html
@@ -8,7 +8,7 @@
       <i class="fas fa-search"></i> Buscar
     </button>
         <div class="col">
-            <input class="form-control" type="text" placeholder="Buscar por producto" [(ngModel)]="id" (keyup.enter)="findById(id)" />
+            <input class="form-control" type="text" placeholder="Buscar por id" [(ngModel)]="id" (keyup.enter)="findById(id)" />
         </div>
     </div>
     <hr class="" />
@@ -18,7 +18,7 @@
     <table class="table table-bordered text-center">
         <thead class="thead-dark">
             <tr>
-                <th scope="col">#</th>
+                <th scope="col">Id</th>
                 <th scope="col">Nombre</th>
                 <th scope="col">Descripción</th>
                 <th scope="col">Estado</th>
@@ -111,7 +111,7 @@
             <div class="form-row">
                 <div class="form-group col-md-10">
                     <label for="inputName ">Nombre</label>
-                    <input type="text " class="form-control" id="inputFistName " name="inputFistName " [(ngModel)]="patModal.name" />
+                    <input type="text " class="form-control" id="inputFistName " name="inputFistName " [(ngModel)]="patModal.name" placeholder="Nombre" />
                 </div>
                 <div class="form-group col-md-2">
                     <label for="inputState">Estado</label>
@@ -122,22 +122,22 @@
                 </div>
                 <div class="form-group col-md-12">
                     <label for="inputUrl ">Url de compra</label>
-                    <input type="text " class="form-control" id="inputLastName2 " name="inputLastName2 " [(ngModel)]="patModal.url" />
+                    <input type="text " class="form-control" id="inputLastName2 " name="inputLastName2 " [(ngModel)]="patModal.url" placeholder="Url" />
                 </div>
             </div>
             <div class="form-row">
                 <div class="form-group col-md-12">
                     <label for="inputDescription ">Descripción</label>
-                    <input type="text " class="form-control" id="inputLastName " name="inputLastName " [(ngModel)]="patModal.description" />
+                    <input type="text " class="form-control" id="inputLastName " name="inputLastName " [(ngModel)]="patModal.description" placeholder="Descripción" />
                 </div>
             </div>
             <div class="form-row">
                 <div class="form-group col-md-12">
                     <label for="inputLastName ">Imagen</label>
-                    <input type="text " class="form-control" id="inputLastName2 " name="inputLastName2 " [(ngModel)]="patModal.image" />
+                    <input type="text " class="form-control" id="inputLastName2 " name="inputLastName2 " [(ngModel)]="patModal.image" placeholder="Imagen" />
                 </div>
             </div>
-            <button type="submit " class="btn btn-block bg-main btn-editar" (click)="crearP()">
+            <button type="submit " class="btn btn-block bg-main btn-editar text-white" (click)="crearP()">
         Crear
       </button>
         </form>
