--- a/src/app/admin/components/patient-admin/patient-admin.component.html
+++ b/src/app/admin/components/patient-admin/patient-admin.component.html
@@ -8,7 +8,7 @@
       <i class="fas fa-search"></i> Buscar
     </button>
         <div class="col">
-            <input class="form-control" type="text" placeholder="Buscar por identificación" [(ngModel)]="identificacion" (keyup.enter)="findById(identificacion)" />
+            <input class="form-control" type="text" placeholder="Buscar por id" [(ngModel)]="identificacion" (keyup.enter)="findById(identificacion)" />
         </div>
     </div>
     <hr class="" />
