--- a/src/app/patient/components/servicios-medicos-patient/servicios-medicos-patient.component.html
+++ b/src/app/patient/components/servicios-medicos-patient/servicios-medicos-patient.component.html
@@ -1,10 +1,10 @@
 <section>
     <div class="container">
         <div class="row">
-            <div class="col-6">
-                <h3 class="mb-3">{{ strTitle }}</h3>
+            <div class="col-10">
+                <h2 class="mb-3 text-center">{{ strTitle }}</h2>
             </div>
-            <div class="col-6 text-right">
+            <div class="col-2 text-right">
                 <a class="btn btn-primary mb-3 mr-1" href="#carouselExampleIndicators2" role="button" data-slide="prev">
                     <i class="fa fa-arrow-left"></i>
                 </a>
