--- a/src/app/patient/components/agenda-patient/agenda-patient.component.html
+++ b/src/app/patient/components/agenda-patient/agenda-patient.component.html
@@ -38,70 +38,14 @@
     <mwl-calendar-day-view *ngSwitchCase="CalendarView.Day" [viewDate]="viewDate" [events]="events" [refresh]="refresh" (eventClicked)="handleEvent('Clicked', $event.event)" (eventTimesChanged)="eventTimesChanged($event)">
     </mwl-calendar-day-view>
 </div>
-
-<!-- Everything you see below is just for the demo, you don't need to include it in your app -->
-
-<br /><br /><br />
-
-<h3>
-    Editar eventos
-    <button class="btn btn-primary float-right" (click)="addEvent()">
-      Agregar evento
-    </button>
-    <div class="clearfix"></div>
-</h3>
-
-<div class="table-responsive">
-    <table class="table table-bordered">
-        <thead>
-            <tr>
-                <th>Titulo</th>
-                <th>Color primario</th>
-                <th>Color secundario</th>
-                <th>Fecha inicio</th>
-                <th>Fecha fin</th>
-                <th>Eliminar</th>
-            </tr>
-        </thead>
-
-        <tbody>
-            <tr *ngFor="let event of events">
-                <td>
-                    <input type="text" class="form-control" [(ngModel)]="event.title" (keyup)="refresh.next()" />
-                </td>
-                <td>
-                    <input type="color" [(ngModel)]="event.color.primary" (change)="refresh.next()" />
-                </td>
-                <td>
-                    <input type="color" [(ngModel)]="event.color.secondary" (change)="refresh.next()" />
-                </td>
-                <td>
-                    <input class="form-control" type="text" mwlFlatpickr [(ngModel)]="event.start" (ngModelChange)="refresh.next()" [altInput]="true" [convertModelValue]="true" [enableTime]="true" dateFormat="Y-m-dTH:i" altFormat="F j, Y H:i" placeholder="Sin asignar" />
-                </td>
-                <td>
-                    <input class="form-control" type="text" mwlFlatpickr [(ngModel)]="event.end" (ngModelChange)="refresh.next()" [altInput]="true" [convertModelValue]="true" [enableTime]="true" dateFormat="Y-m-dTH:i" altFormat="F j, Y H:i" placeholder="Sin asignar" />
-                </td>
-                <td>
-                    <button class="btn btn-danger" (click)="deleteEvent(event)">
-              Delete
-            </button>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-</div>
 <ng-template #modalContent let-close="close">
     <div class="modal-header">
-        <h5 class="modal-title">Evento</h5>
+        <h5 class="modal-title">Cita</h5>
         <button type="button" class="close" (click)="close()">
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
     <div class="modal-body">
-        <div>
-            Action:
-            <pre>{{ modalData?.action }}</pre>
-        </div>
         <div>
             Event:
             <pre>{{ modalData?.event | json }}</pre>
