--- a/src/app/patient/components/agenda-patient/agenda-patient.component.html
+++ b/src/app/patient/components/agenda-patient/agenda-patient.component.html
@@ -13,7 +13,7 @@
         </div>
     </div>
     <div class="col-md-4">
-        <h3>{{ viewDate | calendarDate:(view + 'ViewTitle'):'es' }}</h3>
+        <h3>{{ viewDate | calendarDate: view + "ViewTitle":"es" }}</h3>
     </div>
     <div class="col-md-4">
         <div class="btn-group">
@@ -42,8 +42,8 @@
     <div class="modal-header">
         <h5 class="modal-title">Cita</h5>
         <button type="button" class="close" (click)="close()">
-        <span aria-hidden="true">&times;</span>
-      </button>
+      <span aria-hidden="true">&times;</span>
+    </button>
     </div>
     <div class="modal-body">
         <div>
@@ -53,7 +53,7 @@
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-outline-secondary" (click)="close()">
-        OK
-      </button>
+      OK
+    </button>
     </div>
 </ng-template>
