--- a/src/app/patient/components/agenda-patient/agenda-patient.component.html
+++ b/src/app/patient/components/agenda-patient/agenda-patient.component.html
@@ -40,15 +40,16 @@
 </div>
 <ng-template #modalContent let-close="close">
     <div class="modal-header">
-        <h5 class="modal-title">Cita</h5>
+        <h5 class="modal-title">{{modalData?.event.title}}</h5>
         <button type="button" class="close" (click)="close()">
       <span aria-hidden="true">&times;</span>
     </button>
     </div>
     <div class="modal-body">
         <div>
-            Event:
-            <pre>{{ modalData?.event | json }}</pre>
+            <pre>Fecha Inicio: {{ modalData?.event.start | date:'medium' }}</pre>
+            <pre>Fecha Fin: {{ modalData?.event.end | date:'medium' }}</pre>
+            <pre>Id: {{ modalData?.event.id }}</pre>
         </div>
     </div>
     <div class="modal-footer">
