--- a/src/app/admin/components/admin-principal/admin-principal.component.html
+++ b/src/app/admin/components/admin-principal/admin-principal.component.html
@@ -22,6 +22,9 @@
                 <a routerLink="/admin-principal/products-admin">Productos</a>
             </li>
             <li>
+                <a routerLink="/admin-principal/profile">Perfil</a>
+            </li>
+            <li>
                 <a routerLink="/admin-principal/settings-admin">Configuración</a>
             </li>
             <li>
@@ -59,6 +62,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" routerLink="/admin-principal/entidades-admin">Entidades</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" routerLink="/admin-principal/profile">Perfil</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" routerLink="/admin-principal/settings-admin">Configuración</a>
