Cerrar cita, agregar multiples productos

--- a/src/app/doctor/components/finalizar-cita/finalizar-cita.component.html
+++ b/src/app/doctor/components/finalizar-cita/finalizar-cita.component.html
@@ -42,8 +42,8 @@
             <label for="inputRecomendaciones">Recomendaciones</label>
             <textarea class="form-control" id="inputRecomendaciones" #inputRecomendaciones name="inputRecomendaciones" [(ngModel)]="treatment.description" rows="3"></textarea>
         </div>
-        <button class="btn bg-main btn-block text-color-main" (click)="finalizar()">
-      Finalizar cita
+        <button class="btn bg-main btn-block text-color-main" (click)="agregarTratamiento()">
+      Agregar tratamiento
     </button>
     </form>
 </div>
