--- a/src/app/doctor/components/settings-doctor/settings-doctor.component.html
+++ b/src/app/doctor/components/settings-doctor/settings-doctor.component.html
@@ -41,6 +41,12 @@
         <div class="col-xl-10 form-group">
             <input type="text" class="form-control" [value]="doctor.price| currency:'COP'">
         </div>
+
     </div>
     <hr>
+    <div class="row">
+        <div class="col-xl-12    form-group">
+            <button class="btn bg-main text-white btn-block">Editar</button>
+        </div>
+    </div>
 </div>
