--- a/src/app/patient/components/agenda-patient/agenda-patient.component.html
+++ b/src/app/patient/components/agenda-patient/agenda-patient.component.html
@@ -48,8 +48,10 @@
     <div class="modal-body">
         <div>
             <pre>Doctor: {{ modalData?.event.id }}</pre>
-            <pre>Fecha Inicio: {{ modalData?.event.start | date:'medium' }}</pre>
-            <pre>Fecha Fin: {{ modalData?.event.end | date:'medium' }}</pre>
+            <pre>Fecha: {{ modalData?.event.start | date:'fullDate' }}</pre>
+            <pre>Hora inicio: {{ modalData?.event.start | date:'mediumTime' }}</pre>
+            <pre>Hora fin: {{ modalData?.event.end  | date:'mediumTime' }}</pre>
+            <pre>Precio: {{ modalData?.event.price  | currency:'COP ' }}</pre>
         </div>
     </div>
     <div class="modal-footer">
