--- a/src/app/admin/components/entidades-admin/entidades-admin.component.html
+++ b/src/app/admin/components/entidades-admin/entidades-admin.component.html
@@ -2,7 +2,7 @@
     <h1 class="text-center">{{ strTitle }}</h1>
     <div class="form-group row">
         <button class="btn bg-main ml-3 text-white" (click)="findAll()">
-      <i class="far fa-eye"></i>Mostrar todos
+            <i class="fas fa-heartbeat"></i> Mostrar todos
     </button>
         <button class="btn btn-secondary ml-3" (click)="findById(id)">
       <i class="fas fa-search"></i> Buscar
@@ -26,7 +26,7 @@
             <tr *ngFor="let e of eps| paginate: { itemsPerPage: 5, currentPage: pageActual} ; let i = index">
                 <td>{{i+1}}</td>
                 <td>{{e.epsName}}</td>
-                <td>{{e.state}}</td>
+                <td>{{e.state | state}}</td>
                 <td>
                     <button class="btn bg-main btn-editar text-white" (click)="openCentrado(contenido, e)">
             <i class="fas fa-user-edit"></i>
