--- a/src/app/patient/components/citas-patient/citas-patient.component.html
+++ b/src/app/patient/components/citas-patient/citas-patient.component.html
@@ -4,11 +4,11 @@
         <div class="card animated fadeIn fast" *ngFor="let c of citas">
             <div class="card-body">
                 <h5 class="card-title">
-                    Nombre del doctor: {{ c.firstName + " " + c.lastName }}
+                    {{ c.firstName + " " + c.lastName }}
                 </h5>
-                <p class="card-text">Descripción de la cita: {{ c.description }}</p>
+                <p class="card-text">Descripción: {{ c.description }}</p>
                 <p class="card-text">Fecha de la cita: {{ c.date | date }}</p>
-                <button class="btn btn-primary">Detalles de la cita</button>
+                <button class="btn btn-primary btn-block">Detalles de la cita</button>
             </div>
         </div>
     </div>
