--- a/src/app/patient/components/servicios-medicos-patient/servicios-medicos-patient.component.html
+++ b/src/app/patient/components/servicios-medicos-patient/servicios-medicos-patient.component.html
@@ -31,7 +31,7 @@
                                         </p>
                                         <p>
                                             <button class="card_button bg-main" (click)="openCentrado(contenido, d)">
-                        Pedir cita
+                        Solicitar cita
                       </button>
                                         </p>
                                     </div>
@@ -79,11 +79,11 @@
         <form>
             <div class="form-group">
                 <label for="inputDescription">Descripción</label>
-                <input type="text" class="form-control" id="inputDescription" name="inputDescription" [(ngModel)]="citaModal.description" />
+                <input type="text" class="form-control" id="inputDescription" name="inputDescription" [(ngModel)]="citaModal.description" placeholder="Descripción" />
             </div>
             <div class="form-group">
                 <label for="inputMotivo">Motivo</label>
-                <input type="text" class="form-control" id="inputMotivo" name="inputMotivo" [(ngModel)]="citaModal.reason" />
+                <input type="text" class="form-control" id="inputMotivo" name="inputMotivo" [(ngModel)]="citaModal.reason" placeholder="Motivo" />
             </div>
             <div class="form-group">
                 <label for="inputFecha">Fecha</label>
@@ -106,7 +106,7 @@
         </select>
             </div>
             <button class="btn bg-main text-color-main btn-block" (click)="guardarCita(inputHora.value)">
-        Pedir cita
+        Solicitar cita
       </button>
         </form>
     </div>
